# 3DRenderer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
cmake/: CMakeFunctions.cmake
include/model/: Board.h  BoardSpot.h  Game.h  Move.h  PositionFactory.h  PromotionMove.h  RegularMove.h
include/model/pieces/: Bishop.h  King.h  Knight.h  MoveSensitivePiece.h  Pawn.h  Piece.h  Queen.h  Rook.h
include/view/: BoardActionsHandler.h  MainGameView.h
lib/: CMakeLists.txt  Ray.h
src/: CMakeLists.txt  Ray.cpp  main.cpp
src/model/: Board.cpp  BoardSpot.cpp  Game.cpp  Move.cpp  PositionFactory.cpp  PromotionMove.cpp  RegularMove.cpp
src/model/pieces/: Bishop.cpp  King.cpp  Knight.cpp  MoveSensitivePiece.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/run/: main.cpp
src/view/: BoardActionsHandler.cpp  MainGameView.cpp
tests/: BoardSpotTest.cpp  BoardTest.cpp  CMakeLists.txt  KingTest.cpp  MoveTest.cpp  PromotionTest.cpp
tests/piecesTests/: BishopTest.cpp  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  QueenTest.cpp  RookTest.cpp
